@@ -39,22 +39,22 @@ import com.fasterxml.jackson.databind.PropertyNamingStrategy;
 import com.google.common.collect.Iterators;
 import com.google.common.collect.Streams;
 import com.google.common.net.MediaType;
+import jakarta.xml.bind.JAXBContext;
+import jakarta.xml.bind.JAXBException;
+import jakarta.xml.bind.Marshaller;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.xml.bind.JAXBContext;
-import javax.xml.bind.JAXBException;
-import javax.xml.bind.Marshaller;
+import org.eclipse.jetty.server.Request;
+import org.eclipse.jetty.server.Response;
 
 import java.io.OutputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Enumeration;
-import java.util.stream.Collectors;
 
 import static ee.ria.xroad.common.metadata.MetadataRequests.LIST_CLIENTS;
+import static ee.ria.xroad.common.util.JettyUtils.setContentType;
+import static org.eclipse.jetty.io.Content.Sink.asOutputStream;
 
 /**
  * Soap metadata client request processor
@@ -78,30 +78,22 @@ class MetadataClientRequestProcessor extends MessageProcessorBase {
 
     private final String target;
 
-    MetadataClientRequestProcessor(String target,
-            HttpServletRequest request, HttpServletResponse response) {
+    MetadataClientRequestProcessor(String target, Request request, Response response) {
         super(request, response, null);
 
         this.target = target;
     }
 
     public boolean canProcess() {
-        switch (target) {
-            case LIST_CLIENTS: // $FALL-THROUGH$
-                return true;
-            default:
-                return false;
-        }
+        // $FALL-THROUGH$
+        return target.equals(LIST_CLIENTS);
     }
 
     @Override
     public void process() throws Exception {
-        switch (target) {
-            case LIST_CLIENTS:
-                handleListClients();
-                return;
-            default: // to nothing
-                break;
+        // to nothing
+        if (target.equals(LIST_CLIENTS)) {
+            handleListClients();
         }
     }
 
@@ -117,7 +109,7 @@ class MetadataClientRequestProcessor extends MessageProcessorBase {
                     client.setId(m.getId());
                     client.setName(m.getName());
                     return client;
-                }).collect(Collectors.toList()));
+                }).toList());
 
         if (acceptsJson()) {
             writeResponseJson(list);
@@ -127,24 +119,24 @@ class MetadataClientRequestProcessor extends MessageProcessorBase {
     }
 
     private boolean acceptsJson() {
-        return acceptsJson(servletRequest.getHeaders("Accept"));
+        return acceptsJson(jRequest.getHeaders().getValues("Accept"));
     }
 
     private void writeResponseXml(Object object) throws Exception {
-        servletResponse.setContentType(MimeTypes.TEXT_XML_UTF8);
-        marshal(object, servletResponse.getOutputStream());
+        setContentType(jResponse, MimeTypes.TEXT_XML_UTF8);
+        marshal(object, asOutputStream(jResponse));
     }
 
     private void writeResponseJson(Object object) throws Exception {
-        servletResponse.setCharacterEncoding(StandardCharsets.UTF_8.name());
-        servletResponse.setContentType(
-                MimeUtils.contentTypeWithCharset(MimeTypes.JSON, StandardCharsets.UTF_8.name().toLowerCase()));
-        MAPPER.writeValue(servletResponse.getOutputStream(), object);
+        setContentType(jResponse,
+                MimeUtils.contentTypeWithCharset(MimeTypes.JSON, StandardCharsets.UTF_8.name().toLowerCase()),
+                StandardCharsets.UTF_8.name());
+        MAPPER.writeValue(asOutputStream(jResponse), object);
     }
 
-    private String getInstanceIdentifierFromRequest() {
+    private String getInstanceIdentifierFromRequest() throws Exception {
         String instanceIdentifier =
-                servletRequest.getParameter(PARAM_INSTANCE_IDENTIFIER);
+                Request.getParameters(jRequest).getValue(PARAM_INSTANCE_IDENTIFIER);
         if (StringUtils.isBlank(instanceIdentifier)) {
             instanceIdentifier = GlobalConf.getInstanceIdentifier();
         }
@@ -154,7 +146,7 @@ class MetadataClientRequestProcessor extends MessageProcessorBase {
 
     /**
      * Parses the HTTP "Accept" header, checks if it contains application/json media type.
-     *
+     * <p>
      * Note. Possible media type parameters are ignored since application/json does not define any.
      * Also the quality (q) parameter is ignored, meaning that
      * <pre>Accept: text/xml;q=1.0, application/json;q=0.9</pre>
@@ -162,11 +154,9 @@ class MetadataClientRequestProcessor extends MessageProcessorBase {
      */
     static boolean acceptsJson(final Enumeration<String> accept) {
         return accept != null && Streams.stream(Iterators.forEnumeration(accept))
-                .flatMap(s -> Arrays.asList(s.split("\\s*,\\s*")).stream())
+                .flatMap(s -> Arrays.stream(s.split("\\s*,\\s*")))
                 .map(MediaType::parse)
-                .filter(m -> APPLICATION_JSON.equals(m.withoutParameters()))
-                .findAny()
-                .isPresent();
+                .anyMatch(m -> APPLICATION_JSON.equals(m.withoutParameters()));
     }
 
     private static final MediaType APPLICATION_JSON = MediaType.JSON_UTF_8.withoutParameters();
