@@ -27,12 +27,12 @@
 package org.niis.xroad.cs.admin.globalconf.generator;
 
 import ee.ria.xroad.common.identifier.ClientId;
-import ee.ria.xroad.common.util.CryptoUtils;
 
 import lombok.RequiredArgsConstructor;
-import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.niis.xroad.cs.admin.api.domain.AuthCert;
+import org.niis.xroad.cs.admin.api.domain.ConfigurationSigningKey;
+import org.niis.xroad.cs.admin.api.domain.ConfigurationSourceType;
 import org.niis.xroad.cs.admin.api.domain.FlattenedSecurityServerClientView;
 import org.niis.xroad.cs.admin.api.domain.GlobalGroup;
 import org.niis.xroad.cs.admin.api.domain.GlobalGroupMember;
@@ -42,6 +42,7 @@ import org.niis.xroad.cs.admin.api.dto.CertificationService;
 import org.niis.xroad.cs.admin.api.dto.OcspResponder;
 import org.niis.xroad.cs.admin.api.service.CertificationServicesService;
 import org.niis.xroad.cs.admin.api.service.ClientService;
+import org.niis.xroad.cs.admin.api.service.ConfigurationService;
 import org.niis.xroad.cs.admin.api.service.GlobalGroupMemberService;
 import org.niis.xroad.cs.admin.api.service.GlobalGroupService;
 import org.niis.xroad.cs.admin.api.service.MemberClassService;
@@ -69,10 +70,12 @@ class SharedParametersLoader {
     private final GlobalGroupService globalGroupService;
     private final GlobalGroupMemberService globalGroupMemberService;
     private final MemberClassService memberClassService;
+    private final ConfigurationService configurationService;
 
 
     SharedParameters load() {
         var parameters = new SharedParameters();
+        parameters.setSources(getSources());
         parameters.setInstanceIdentifier(systemParameterService.getInstanceIdentifier());
         parameters.setApprovedCAs(getApprovedCAs());
         parameters.setApprovedTSAs(getApprovedTSAs());
@@ -83,11 +86,40 @@ class SharedParametersLoader {
         return parameters;
     }
 
+    private List<SharedParameters.ConfigurationSource> getSources() {
+        return configurationService.getNodeAddressesWithConfigurationSigningKeys().entrySet().stream()
+                .map(this::toSource)
+                .toList();
+    }
+
+    private SharedParameters.ConfigurationSource toSource(
+            Map.Entry<String, List<ConfigurationSigningKey>> addressWithConfigurationSigningKeys
+    ) {
+        var source = new SharedParameters.ConfigurationSource();
+        source.setAddress(addressWithConfigurationSigningKeys.getKey());
+        source.setInternalVerificationCerts(
+                getSigningKeysByType(addressWithConfigurationSigningKeys.getValue(), ConfigurationSourceType.INTERNAL)
+        );
+        source.setExternalVerificationCerts(
+                getSigningKeysByType(addressWithConfigurationSigningKeys.getValue(), ConfigurationSourceType.EXTERNAL)
+        );
+        return source;
+    }
+
+    private List<byte[]> getSigningKeysByType(
+            List<ConfigurationSigningKey> signingKeys, ConfigurationSourceType configurationSourceType
+    ) {
+        return signingKeys.stream()
+                .filter(key -> configurationSourceType.equals(key.getSourceType()))
+                .map(ConfigurationSigningKey::getCert)
+                .toList();
+    }
+
     private List<SharedParameters.ApprovedCA> getApprovedCAs() {
         var approvedCas = certificationServicesService.findAll();
         return approvedCas.stream()
                 .map(this::toApprovedCa)
-                .collect(toList());
+                .toList();
     }
 
     private SharedParameters.ApprovedCA toApprovedCa(CertificationService ca) {
@@ -103,13 +135,13 @@ class SharedParametersLoader {
     private List<SharedParameters.CaInfo> toCaInfos(List<CertificateAuthority> cas) {
         return cas.stream()
                 .map(ca -> new SharedParameters.CaInfo(toOcspInfos(ca.getOcspResponders()), ca.getCaCertificate().getEncoded()))
-                .collect(toList());
+                .toList();
     }
 
     private List<SharedParameters.OcspInfo> toOcspInfos(List<OcspResponder> ocspResponders) {
         return ocspResponders.stream()
                 .map(this::toOcspInfo)
-                .collect(toList());
+                .toList();
     }
 
     private SharedParameters.OcspInfo toOcspInfo(OcspResponder ocsp) {
@@ -119,7 +151,7 @@ class SharedParametersLoader {
     private List<SharedParameters.ApprovedTSA> getApprovedTSAs() {
         return timestampingServicesService.getTimestampingServices().stream()
                 .map(tsa -> new SharedParameters.ApprovedTSA(tsa.getName(), tsa.getUrl(), tsa.getCertificate().getEncoded()))
-                .collect(toList());
+                .toList();
     }
 
     private List<SharedParameters.Member> getMembers() {
@@ -130,7 +162,7 @@ class SharedParametersLoader {
     private List<SharedParameters.SecurityServer> getSecurityServers() {
         return securityServerService.findAll().stream()
                 .map(this::toSecurityServer)
-                .collect(toList());
+                .toList();
     }
 
     private SharedParameters.SecurityServer toSecurityServer(SecurityServer ss) {
@@ -139,22 +171,18 @@ class SharedParametersLoader {
         result.setAddress(ss.getAddress());
         result.setServerCode(ss.getServerCode());
         result.setClients(getSecurityServerClients(ss.getId()));
-        result.setAuthCertHashes(ss.getAuthCerts().stream()
+        result.setAuthCerts(ss.getAuthCerts().stream()
                 .map(AuthCert::getCert)
-                .map(SharedParametersLoader::certHash)
-                .collect(toList()));
+                .toList());
         return result;
     }
 
     private List<ClientId> getSecurityServerClients(int id) {
-        return clientService.find(new ClientService.SearchParameters().setSecurityServerId(id))
-                .stream().map(SharedParametersLoader::toClientId).collect(toList());
+        return clientService.find(new ClientService.SearchParameters()
+                        .setSecurityServerId(id)
+                        .setSecurityServerEnabled(true))
+                .stream().map(SharedParametersLoader::toClientId).toList();
 
-    }
-
-    @SneakyThrows
-    private static byte[] certHash(byte[] cert) {
-        return CryptoUtils.certHash(cert);
     }
 
     private static ClientId toClientId(FlattenedSecurityServerClientView client) {
@@ -167,7 +195,7 @@ class SharedParametersLoader {
     private List<SharedParameters.GlobalGroup> getGlobalGroups() {
         return globalGroupService.findGlobalGroups().stream()
                 .map(this::getGlobalGroup)
-                .collect(toList());
+                .toList();
     }
 
     private SharedParameters.GlobalGroup getGlobalGroup(GlobalGroup globalGroup) {
@@ -186,7 +214,7 @@ class SharedParametersLoader {
     private SharedParameters.GlobalSettings getGlobalSettings() {
         var memberClasses = memberClassService.findAll().stream()
                 .map(memberClass -> new SharedParameters.MemberClass(memberClass.getCode(), memberClass.getDescription()))
-                .collect(toList());
+                .toList();
 
         return new SharedParameters.GlobalSettings(memberClasses, systemParameterService.getOcspFreshnessSeconds());
     }
